<resources>
    <string name="app_name">FSerials</string>

    <string name="news">Новинки</string>
    <string name="subscribtions">Лента</string>
    <string name="qeue_next">Следующие</string>
    <string name="share">Поделиться</string>
    <string name="pip">PIP</string>
    <string name="quality">Качество</string>
    <string name="load">Загрузить</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="viewed">Просмотренно</string>
    <string name="subscribe">Подписаться</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="video_error">Что-то пошло не так. Мы уже знаем об проблеме и ищем решение.</string>
    <string name="episode_extra">episode</string>
    <string name="subscriptions_extra">subscriptions</string>
    <string name="donat">Поддержать разаработчика</string>
    <string name="private_policy_title">Политика конфиденциальности</string>
    <string name="private_policy"><![CDATA[
    <p>1. Общая информация</p>
    <p>1.1 Настоящая Политика конфиденциальности (далее - Политика) разработана для мобильного приложения "FSerials". В настоящей политике описано, какие данные собираются и обрабатываются разработчиком.</p>
    <p>1.2 Разработчик оставляет за собой право вносить изменения в приложение и, при необходимости, адаптировать настоящую политику к внесенным изменениям.</p>
    <p>2. Цели обработки данных пользователей компанией</p>
    <p>2.1 Разработчик собирает данные технического характера об использовании приложения и о возникающих ошибках с целью создания статистики пользования приложением для последующего его улучшения и устранения ошибок.</p>
    <p>2.2 Разработчик может собирать персональные данные пользователя приложения (имя и e-mail пользователя) в случае регистрации в приложения.</p>
    <p>3. Данные пользователей, которые собирает и обрабатывает компания</p>
    <p>3.1. Личные данные: имя и e-mail пользователя. Разработчик не собирает и не обрабатывает другие личные данные пользователей приложения, которые вносятся в приложение самими пользователями.</p>
    <p>3.2. Технические данные, которые собирает компания: данные о количестве запусков приложений в целом и их отдельных экранов и функций, числе активных пользователей, стране и регионе использования приложения.</p>
    <p>3.3. Данные об ошибках, которые собирает компания: технические параметры устройства, данные о локализации ошибки, частоте ошибок и сбоев.</p>
    <p>3.4. Все пользователи имеют возможность отключить предоставление компании технических данных и данных об ошибках через меню настроек приложений.</p>
    <p>4. Передача данных пользователей, которые собирает и обрабатывает компания, третьим лицам</p>
    <p>Для осуществления сбора, обработки и хранения данных технического характера об использовании приложений и о возникающих ошибках, компания может использовать сервисы третьих лиц (Google Firebase).</p>
    <p>5. Безопасность данных пользователей</p>
    <p>Обработка данных пользователей происходит в приложении на их собственных устройствах без участия компании.</p>
    <p>Безопасность данных обеспечивается стандартными средствами операционной системы, в самом приложениии дополнительные средства защиты отсутствуют.</p>
    <p>Пользователи используют приложение как есть и самостоятельно обеспечивают защиту своих данных в нем от угроз безопасности, в т.ч., но не ограничиваясь:</p>
    <p>— защищают свое устройство и установленные в нем приложения от кражи или утери;</p>
    <p>— защищают свое устройство и установленные в нем приложения от несанкционированного доступа.</p>
    <p>6. Контакты</p>
    <p>По вопросам работы Приложений можно обращаться по электронной почте по адресу <a href="mailto:mr.starostinvlad@gmail.com">mr.starostinvlad@gmail.com</a></p>
    ]]>
    </string>
    <string name="content_policy_title">Правообладателям</string>
    <string name="content_policy"><![CDATA[
        <html>
        <head>
            <meta charset="utf-8">
        </head>
        <body>
        <p>Данное приложение действует в соответствии с законодательством Российской Федерации о защите информации и авторских прав.</p>
        <p>Весь размещенный в приложении контент представляет собой материал, находящийся в свободном доступе для просмотра в сети Интернет.</p>
        <p>Администрация приложения также не осуществляет деятельность, связанную с публикацией нелицензионного контента, незаконно украденного и находящегося под защитой правообладателей. Автоматизированная система публикует только находящийся в свободном доступе материал из открытых источников.</p>
        <p>Администрация приложения всегда открыта для сотрудничества с правообладателями. Если Ваши исключительные права на объекты авторской собственности нарушаются каким-либо образом с использованием данного приложения (размещение информации, защищенной авторским правом), администрация готова оказать Вам содействие и удалить с сайта соответствующие материалы.</p>
        <p>При возникновении спорных ситуаций мы просим Вас прислать нам письмо в электронном виде, где необходимо указать следующее:</p>
        <p>1. Документальное подтверждение Ваших прав на материал, защищённый авторским правом: отсканированный документ с печатью, либо email с официального почтового домена компании правообладателя, либо иная информация, позволяющая однозначно идентифицировать Вас как правообладателя данного материала.</p>
        <p>2. Название фильмов, опубликованные с нарушением авторских прав.</p>
        <p>При получении письма, содержащего данное подтверждение, в течение 48 часов мы удалим из приложения защищенный авторским правом контент.</p>
        <p>По вопросам просим Вас обращаться на
        <strong>почту:&nbsp;</strong><a href="mailto:mr.starostinvlad@gmail.com">mr.starostinvlad@gmail.com</a>&nbsp;<br>Вы получите ответ в течение суток с момента получения письма.</p>
        </body></html>
        ]]></string>
    <string name="on_review">Данный сериал недоступен в вашей стране</string>
</resources>
