<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_video"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/crop_video"
        android:icon="@android:drawable/ic_menu_crop"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/pip"
        android:icon="@drawable/ic_branding_watermark"
        android:orderInCategory="1"
        android:title="@string/pip"
        app:showAsAction="always" />
    <item
        android:id="@+id/quality"
        android:icon="@drawable/ic_hd"
        android:orderInCategory="1"
        android:title="@string/quality"
        app:showAsAction="never" />
    <item
        android:id="@+id/subscribe_checker"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/subscribe"
        app:showAsAction="never" />

</menu>