<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsScreen.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/content_policy"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_policy_title" />

                    <Button
                        android:id="@+id/private_policy"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/private_policy_title" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="20dp"
                android:background="@android:color/holo_orange_dark"
                android:padding="5dp"
                android:text="@string/logout"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>